--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,12 @@
+@article{baum1966statistical,
+  title={Statistical inference for probabilistic functions of finite state Markov chains},
+  author={Baum, Leonard E and Petrie, Ted},
+  journal={The annals of mathematical statistics},
+  pages={1554--1563},
+  year={1966},
+  publisher={JSTOR}
+}
+
 @InProceedings{huang-fayong-guo:2012:NAACL-HLT,
   author    = {Huang, Liang  and  Fayong, Suphan  and  Guo, Yang},
   title     = {Structured Perceptron with Inexact Search},
