--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,35 @@
+@INPROCEEDINGS{Tseng05aconditional,
+    author = {Huihsin Tseng},
+    title = {A conditional random field word segmenter},
+    booktitle = {In Fourth SIGHAN Workshop on Chinese Language Processing},
+    year = {2005}
+}
+
+@inproceedings{Shi:2007:DCB:1625275.1625552,
+ author = {Shi, Yanxin and Wang, Mengqiu},
+ title = {A Dual-layer CRFs Based Joint Decoding Method for Cascaded Segmentation and Labeling Tasks},
+ booktitle = {Proceedings of the 20th International Joint Conference on Artifical Intelligence},
+ series = {IJCAI'07},
+ year = {2007},
+ location = {Hyderabad, India},
+ pages = {1707--1712},
+ numpages = {6},
+ url = {http://dl.acm.org/citation.cfm?id=1625275.1625552},
+ acmid = {1625552},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+}
+
+@inproceedings{bottou-91c,
+  author = {Bottou, {L\'eon}},
+  title = {Stochastic Gradient Learning in Neural Networks},
+  booktitle = {Proceedings of Neuro-N\^imes 91},
+  year = {1991},
+  address = {Nimes, France},
+  publisher = {EC2},
+  url = {http://leon.bottou.org/papers/bottou-91c},
+}
+
 @article{baum1966statistical,
   title={Statistical inference for probabilistic functions of finite state Markov chains},
   author={Baum, Leonard E and Petrie, Ted},
