bib from : http://aclweb.org/anthology//C/C10/C10-2129.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{seeker-EtAl:2010:POSTERS,
+  author    = {Seeker, Wolfgang  and  Bohnet, Bernd  and  {\O}vrelid, Lilja  and  Kuhn, Jonas},
+  title     = {Informed ways of improving data-driven dependency parsing for German},
+  booktitle = {Coling 2010: Posters},
+  month     = {August},
+  year      = {2010},
+  address   = {Beijing, China},
+  publisher = {Coling 2010 Organizing Committee},
+  pages     = {1122--1130},
+  url       = {http://www.aclweb.org/anthology/C10-2129}
+}
+
+
 @INPROCEEDINGS{Tseng05aconditional,
     author = {Huihsin Tseng},
     title = {A conditional random field word segmenter},
