bib from : http://aclweb.org/anthology//C/C10/C10-1012.bib

--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,16 @@
+@InProceedings{bohnet-EtAl:2010:PAPERS,
+  author    = {Bohnet, Bernd  and  Wanner, Leo  and  Mill, Simon  and  Burga, Alicia},
+  title     = {Broad Coverage Multilingual Deep Sentence Generation with a Stochastic Multi-Level Realizer},
+  booktitle = {Proceedings of the 23rd International Conference on Computational Linguistics (Coling 2010)},
+  month     = {August},
+  year      = {2010},
+  address   = {Beijing, China},
+  publisher = {Coling 2010 Organizing Committee},
+  pages     = {98--106},
+  url       = {http://www.aclweb.org/anthology/C10-1012}
+}
+
+
 @InProceedings{seeker-EtAl:2010:POSTERS,
   author    = {Seeker, Wolfgang  and  Bohnet, Bernd  and  {\O}vrelid, Lilja  and  Kuhn, Jonas},
   title     = {Informed ways of improving data-driven dependency parsing for German},
