--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,119 @@
+@INPROCEEDINGS{White04reiningin,
+    author = {Michael White},
+    title = {Reining in CCG chart realization},
+    booktitle = {In Proc. INLG-04},
+    year = {2004},
+    pages = {182--191}
+}
+
+@inproceedings{collins-roark:2004:ACL,
+  author    = {Collins, Michael  and  Roark, Brian},
+  title     = {Incremental Parsing with the Perceptron Algorithm},
+  booktitle = {Proceedings of the 42nd Meeting of the Association for Computational Linguistics (ACL'04), Main Volume},
+  year      = 2004,
+  month     = {July},
+  address   = {Barcelona, Spain},
+  pages     = {111--118},
+  url       = {http://www.aclweb.org/anthology/P04-1015},
+  doi       = {10.3115/1218955.1218970}
+}
+
+@article{zhang-clark:cl:2011,
+  author    = {Yue Zhang and
+               Stephen Clark},
+  title     = {Syntactic Processing Using the Generalized Perceptron and
+               Beam Search},
+  journal   = {Computational Linguistics},
+  volume    = {37},
+  number    = {1},
+  year      = {2011},
+  pages     = {105-151},
+  ee        = {http://dx.doi.org/10.1162/coli_a_00037},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@inproceedings{song:aaai:2014,
+   author              = {Linfeng Song and 
+                          Yue Zhang and 
+                          Kai Song and 
+                          Qun Liu},
+   title               = {Joint Morphological Generation and Syntactic Linearization.},
+   booktitle           = {AAAI},
+   year                = {2014},
+   pages               = {1522-1528},
+   ee                  = {http://www.aaai.org/ocs/index.php/AAAI/AAAI14/paper/view/8214},
+   crossref            = {2014},
+}
+
+
+@article{Reiter:1997:BAN:974487.974490,
+ author = {Reiter, Ehud and Dale, Robert},
+ title = {Building Applied Natural Language Generation Systems},
+ journal = {Nat. Lang. Eng.},
+ issue_date = {March 1997},
+ volume = {3},
+ number = {1},
+ month = mar,
+ year = {1997},
+ issn = {1351-3249},
+ pages = {57--87},
+ numpages = {31},
+ url = {http://dx.doi.org/10.1017/S1351324997001502},
+ doi = {10.1017/S1351324997001502},
+ acmid = {974490},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
+
+@inproceedings{zhang:ijcai:2013,
+   author              = {Yue Zhang},
+   title               = {Partial-Tree Linearization: Generalized Word Ordering for Text Synthesis.},
+   booktitle           = {IJCAI},
+   year                = {2013},
+   ee                  = {http://www.aaai.org/ocs/index.php/IJCAI/IJCAI13/paper/view/6314},
+   crossref            = {2013},
+}
+
+
+@InProceedings{zhang-blackwood-clark:2012:EACL2012,
+  author    = {Zhang, Yue  and  Blackwood, Graeme  and  Clark, Stephen},
+  title     = {Syntax-Based Word Ordering Incorporating a Large-Scale Language Model},
+  booktitle = {Proceedings of the 13th Conference of the European Chapter of the Association for Computational Linguistics},
+  month     = {April},
+  year      = {2012},
+  address   = {Avignon, France},
+  publisher = {Association for Computational Linguistics},
+  pages     = {736--746},
+  url       = {http://www.aclweb.org/anthology/E12-1075}
+}
+
+
+@InProceedings{he-EtAl:2009:ACLIJCNLP,
+  author    = {He, Wei  and  Wang, Haifeng  and  Guo, Yuqing  and  Liu, Ting},
+  title     = {Dependency Based Chinese Sentence Realization},
+  booktitle = {Proceedings of the Joint Conference of the 47th Annual Meeting of the ACL and the 4th International Joint Conference on Natural Language Processing of the AFNLP},
+  month     = {August},
+  year      = {2009},
+  address   = {Suntec, Singapore},
+  publisher = {Association for Computational Linguistics},
+  pages     = {809--816},
+  url       = {http://www.aclweb.org/anthology/P/P09/P09-1091}
+}
+
+
+@InProceedings{wan-EtAl:2009:EACL,
+  author    = {Wan, Stephen  and  Dras, Mark  and  Dale, Robert  and  Paris, C\'{e}cile},
+  title     = {Improving Grammaticality in Statistical Sentence Generation: Introducing a Dependency Spanning Tree Algorithm with an Argument Satisfaction Model},
+  booktitle = {Proceedings of the 12th Conference of the European Chapter of the ACL (EACL 2009)},
+  month     = {March},
+  year      = {2009},
+  address   = {Athens, Greece},
+  publisher = {Association for Computational Linguistics},
+  pages     = {852--860},
+  url       = {http://www.aclweb.org/anthology/E09-1097}
+}
+
+
 @InProceedings{ma-zhang-zhu:2014:P14-1,
   author    = {Ma, Ji  and  Zhang, Yue  and  Zhu, Jingbo},
   title     = {Tagging The Web: Building A Robust Web Tagger with Neural Network},
