--- a/db.bib
+++ b/db.bib
@@ -1,6 +1,273 @@
+
+
+@InProceedings{martins-EtAl:2011:EMNLP1,
+  author    = {Martins, Andre  and  Smith, Noah  and  Figueiredo, Mario  and  Aguiar, Pedro},
+  title     = {Dual Decomposition with Many Overlapping Components},
+  booktitle = {Proceedings of the 2011 Conference on Empirical Methods in Natural Language Processing},
+  month     = {July},
+  year      = {2011},
+  address   = {Edinburgh, Scotland, UK.},
+  publisher = {Association for Computational Linguistics},
+  pages     = {238--249},
+  url       = {http://www.aclweb.org/anthology/D11-1022}
+}
+
+@InProceedings{zhang-EtAl:2013:EMNLP2,
+  author    = {Zhang, Hao  and  Huang, Liang  and  Zhao, Kai  and  McDonald, Ryan},
+  title     = {Online Learning for Inexact Hypergraph Search},
+  booktitle = {Proceedings of the 2013 Conference on Empirical Methods in Natural Language Processing},
+  month     = {October},
+  year      = {2013},
+  address   = {Seattle, Washington, USA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {908--913},
+  url       = {http://www.aclweb.org/anthology/D13-1093}
+}
+
+@InProceedings{koo-EtAl:2010:EMNLP,
+  author    = {Koo, Terry  and  Rush, Alexander M.  and  Collins, Michael  and  Jaakkola, Tommi  and  Sontag, David},
+  title     = {Dual Decomposition for Parsing with Non-Projective Head Automata},
+  booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
+  month     = {October},
+  year      = {2010},
+  address   = {Cambridge, MA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {1288--1298},
+  url       = {http://www.aclweb.org/anthology/D10-1125}
+}
+
+@incollection{NIPS2001_2089,
+title = {Convolution Kernels for Natural Language},
+author = {Michael Collins and Nigel Duffy},
+booktitle = {Advances in Neural Information Processing Systems 14},
+editor = {T.G. Dietterich and S. Becker and Z. Ghahramani},
+pages = {625--632},
+year = {2002},
+publisher = {MIT Press},
+url = {http://papers.nips.cc/paper/2089-convolution-kernels-for-natural-language.pdf}
+}
+
+@inproceedings{Cao:2007:LRP:1273496.1273513,
+ author = {Cao, Zhe and Qin, Tao and Liu, Tie-Yan and Tsai, Ming-Feng and Li, Hang},
+ title = {Learning to Rank: From Pairwise Approach to Listwise Approach},
+ booktitle = {Proceedings of the 24th International Conference on Machine Learning},
+ series = {ICML '07},
+ year = {2007},
+ isbn = {978-1-59593-793-3},
+ location = {Corvalis, Oregon, USA},
+ pages = {129--136},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1273496.1273513},
+ doi = {10.1145/1273496.1273513},
+ acmid = {1273513},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@InProceedings{charniak-johnson:2005:ACL,
+  author    = {Charniak, Eugene  and  Johnson, Mark},
+  title     = {Coarse-to-Fine n-Best Parsing and MaxEnt Discriminative Reranking},
+  booktitle = {Proceedings of the 43rd Annual Meeting of the Association for Computational Linguistics (ACL'05)},
+  month     = {June},
+  year      = {2005},
+  address   = {Ann Arbor, Michigan},
+  publisher = {Association for Computational Linguistics},
+  pages     = {173--180},
+  url       = {http://www.aclweb.org/anthology/P05-1022},
+  doi       = {10.3115/1219840.1219862}
+}
+
+@inproceedings{eisner-1996-coling,
+  author =      {Jason Eisner},
+  title =       {Three New Probabilistic Models for Dependency Parsing:
+                 An Exploration},
+  booktitle =   {Proceedings of the 16th International Conference on
+                 Computational Linguistics (COLING-96)},
+  pages =       {340--345},
+  year =        {1996},
+  month =       aug,
+  address =     {Copenhagen},
+  url =         {http://cs.jhu.edu/~jason/papers/#eisner-1996-coling}
+}
+
+@InProceedings{daume05search,
+author = {Hal {Daum\'e III} and John Langford and Daniel Marcu},
+title = {Search-Based Structured Prediction as Classification},
+booktitle = {NIPS Workshop on Advances in Structured Learning for Text and Speech
+Processing (ASLTSP)},
+year = {2005},
+address = {Whistler, Canada},
+url = {http://hal3.name/docs/#daume05search}
+}
+
+@article{DBLP:journals/jair/DoppaFT14,
+  author    = {Janardhan Rao Doppa and
+               Alan Fern and
+               Prasad Tadepalli},
+  title     = {HC-Search: {A} Learning Framework for Search-based Structured Prediction},
+  journal   = {J. Artif. Intell. Res. {(JAIR)}},
+  volume    = {50},
+  pages     = {369--407},
+  year      = {2014},
+  url       = {http://dx.doi.org/10.1613/jair.4212},
+  doi       = {10.1613/jair.4212},
+  timestamp = {Fri, 24 Oct 4435930 17:19:28 +},
+  biburl    = {http://dblp1.uni-trier.de/rec/bib/journals/jair/DoppaFT14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@InProceedings{zhang-EtAl:2014:P14-12,
+  author    = {Zhang, Yuan  and  Lei, Tao  and  Barzilay, Regina  and  Jaakkola, Tommi  and  Globerson, Amir},
+  title     = {Steps to Excellence: Simple Inference with Refined Scoring of Dependency Trees},
+  booktitle = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  month     = {June},
+  year      = {2014},
+  address   = {Baltimore, Maryland},
+  publisher = {Association for Computational Linguistics},
+  pages     = {197--207},
+  url       = {http://www.aclweb.org/anthology/P14-1019}
+}
+
+@InProceedings{huang:2008:ACLMain,
+  author    = {Huang, Liang},
+  title     = {Forest Reranking: Discriminative Parsing with Non-Local Features},
+  booktitle = {Proceedings of ACL-08: HLT},
+  month     = {June},
+  year      = {2008},
+  address   = {Columbus, Ohio},
+  publisher = {Association for Computational Linguistics},
+  pages     = {586--594},
+  url       = {http://www.aclweb.org/anthology/P/P08/P08-1067}
+}
+
+@incollection{white2004reining,
+  title={Reining in CCG chart realization},
+  author={White, Michael},
+  booktitle={Natural Language Generation},
+  pages={182--191},
+  year={2004},
+  publisher={Springer}
+}
+
+@InProceedings{xu-clark-zhang:2014:P14-1,
+  author    = {Xu, Wenduan  and  Clark, Stephen  and  Zhang, Yue},
+  title     = {Shift-Reduce CCG Parsing with a Dependency Model},
+  booktitle = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  month     = {June},
+  year      = {2014},
+  address   = {Baltimore, Maryland},
+  publisher = {Association for Computational Linguistics},
+  pages     = {218--227},
+  url       = {http://www.aclweb.org/anthology/P14-1021}
+}
+
+@InProceedings{sagae-lavie-macwhinney:2005:ACL,
+  author    = {Sagae, Kenji  and  Lavie, Alon  and  MacWhinney, Brian},
+  title     = {Automatic Measurement of Syntactic Development in Child Language},
+  booktitle = {Proceedings of the 43rd Annual Meeting of the Association for Computational Linguistics (ACL'05)},
+  month     = {June},
+  year      = {2005},
+  address   = {Ann Arbor, Michigan},
+  publisher = {Association for Computational Linguistics},
+  pages     = {197--204},
+  url       = {http://www.aclweb.org/anthology/P05-1025},
+  doi       = {10.3115/1219840.1219865}
+}
+
+@InProceedings{yijia-EtAl:2012:CLP2012,
+  author    = {Yijia, Liu  and  Meishan, Zhang  and  Wanxiang, Che  and  Ting, Liu  and  Yihe, Deng},
+  title     = {Micro blogs Oriented Word Segmentation System},
+  booktitle = {Proceedings of the Second CIPS-SIGHAN Joint Conference on Chinese Language Processing},
+  month     = {December},
+  year      = {2012},
+  address   = {Tianjin, China},
+  publisher = {Association for Computational Linguistics},
+  pages     = {85--89},
+  url       = {http://www.aclweb.org/anthology/W12-6316}
+}
+
+@incollection{Liu-EtAl:2013:CNCCL2013,
+  year={2013},
+  isbn={978-3-642-41490-9},
+  booktitle={Chinese Computational Linguistics and Natural Language Processing Based on Naturally Annotated Big Data},
+  volume={8202},
+  series={Lecture Notes in Computer Science},
+  editor={Sun, Maosong and Zhang, Min and Lin, Dekang and Wang, Haifeng},
+  doi={10.1007/978-3-642-41491-6_6},
+  title={Enhancing Chinese Word Segmentation with Character Clustering},
+  url={http://dx.doi.org/10.1007/978-3-642-41491-6_6},
+  publisher={Springer Berlin Heidelberg},
+  keywords={Brown clustering; Chinese word segmentation; semi-supervised learning},
+  author={Liu, Yijia and Che, Wanxiang and Liu, Ting},
+  pages={52-60},
+  language={English}
+}
+
+@InProceedings{belz-EtAl:2011:ENLG2,
+  author    = {Belz, Anja  and  White, Mike  and  Espinosa, Dominic  and  Kow, Eric  and  Hogan, Deirdre  and  Stent, Amanda},
+  title     = {The First Surface Realisation Shared Task: Overview and Evaluation Results},
+  booktitle = {Proceedings of the Generation Challenges Session at the 13th European Workshop on Natural Language Generation},
+  month     = {September},
+  year      = {2011},
+  address   = {Nancy, France},
+  publisher = {Association for Computational Linguistics},
+  pages     = {217--226},
+  url       = {http://www.aclweb.org/anthology/W11-2832}
+}
+
+
+@InProceedings{degispert-tomalin-byrne:2014:EACL,
+  author    = {de Gispert, Adri\`{a}  and  Tomalin, Marcus  and  Byrne, Bill},
+  title     = {Word Ordering with Phrase-Based Grammars},
+  booktitle = {Proceedings of the 14th Conference of the European Chapter of the Association for Computational Linguistics},
+  month     = {April},
+  year      = {2014},
+  address   = {Gothenburg, Sweden},
+  publisher = {Association for Computational Linguistics},
+  pages     = {259--268},
+  url       = {http://www.aclweb.org/anthology/E14-1028}
+}
+
+@InProceedings{papineni-EtAl:2002:ACL,
+  author    = {Kishore Papineni  and  Salim Roukos  and  Todd Ward  and  Wei-Jing Zhu},
+  title     = {Bleu: a Method for Automatic Evaluation of Machine Translation},
+  booktitle = {Proceedings of 40th Annual Meeting of the Association for Computational Linguistics},
+  month     = {July},
+  year      = {2002},
+  address   = {Philadelphia, Pennsylvania, USA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {311--318},
+  url       = {http://www.aclweb.org/anthology/P02-1040},
+  doi       = {10.3115/1073083.1073135}
+}
+
+@InProceedings{zhang-clark:2011:EMNLP,
+  author    = {Zhang, Yue  and  Clark, Stephen},
+  title     = {Syntax-Based Grammaticality Improvement using {CCG} and Guided Search},
+  booktitle = {Proceedings of the 2011 Conference on Empirical Methods in Natural Language Processing},
+  month     = {July},
+  year      = {2011},
+  address   = {Edinburgh, Scotland, UK.},
+  publisher = {Association for Computational Linguistics},
+  pages     = {1147--1157},
+  url       = {http://www.aclweb.org/anthology/D11-1106}
+}
+
+@InProceedings{white-rajkumar:2009:EMNLP,
+  author    = {White, Michael  and  Rajkumar, Rajakrishnan},
+  title     = {Perceptron Reranking for {CCG} Realization},
+  booktitle = {Proceedings of the 2009 Conference on Empirical Methods in Natural Language Processing},
+  month     = {August},
+  year      = {2009},
+  address   = {Singapore},
+  publisher = {Association for Computational Linguistics},
+  pages     = {410--419},
+  url       = {http://www.aclweb.org/anthology/D/D09/D09-1043}
+}
+
 @INPROCEEDINGS{White04reiningin,
     author = {Michael White},
-    title = {Reining in CCG chart realization},
+    title = {Reining in {CCG} chart realization},
     booktitle = {In Proc. INLG-04},
     year = {2004},
     pages = {182--191}
@@ -1162,7 +1429,7 @@
 
 @InProceedings{zhang-clark:2011:ACL-HLT2011,
   author    = {Zhang, Yue  and  Clark, Stephen},
-  title     = {Shift-Reduce CCG Parsing},
+  title     = {Shift-Reduce {CCG} Parsing},
   booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},
   month     = {June},
   year      = {2011},
